# 42sh

./: .gitattributes  .gitignore  .history  CMakeLists.txt  LoadLibProjects42.sh  Makefile  README.md  author  dirlist  eof  main.c  minishell  tmp
bin_table/: Makefile
bin_table/includes/: bin_table.h
bin_table/srcs/: bin_table.c  built_table.c
builtins/: Makefile
builtins/builtins_list/: builtins_list
builtins/cd/: cd.c  main.c
builtins/echo/: echo.c  main.c
builtins/env/: env.c  main.c
builtins/includes/: builtins.h
builtins/ls/: Makefile  main.c
builtins/setenv/: main.c  setenv.c
builtins/srcs/: alias.c  bg.c  cd.c  cdpath.c  echo.c  echo_eflag.c  echo_one_escape.c  env.c  exit_built.c  export.c  (+32 more)
calc/: Makefile
environ/: Makefile
error/: Makefile
ft_readline/: Makefile
hash_table/: Makefile
history/: Makefile
includes/: 2  42sh.h  colour.h  ft_errno.h  ft_shell.h  hash_table.h  minishell.h  term.h
interpretator/: Makefile
jobs/: Makefile
lex/: Makefile
lexer/: Makefile
libft/: Makefile
libraries/: .gitignore  Makefile
line_editing/: Makefile
main/: Makefile
parser/: Makefile
prompt/: Makefile
read_line/: Makefile
reading/: Makefile
signal/: Makefile
srcs/: .gitignore  autocom.c  cd.c  check.c  echo.c  env.c  env_make.c  flags.c  ft_errno.c  get.c  make.c  make2.c  make3.c  make4.c  parse.c  print.c  reading.c  shell.c  signal.c
sub/: Makefile
term/: Makefile
test_processes/: main1  main2  main2.c
tests/: cd.txt  echo.txt  errors.txt  exit.txt  glob.txt  inhibitor.txt  ls.txt  tilde.txt  var_sub.txt
(+659 files in other folders)
